# wombat-symx

./: .gitignore  Cargo.toml  LICENSE.md  README.md  benchmark.sh  benchmark_results.txt  cleanup-tests.sh  combine_benchmark_results.sh  demo-commands.txt  generate_test_seq_br.py  help.sh  orig.txt  orig2.txt  output-tests-dump.sh  sadge.rs  test_seq_br_unsafe_5.rs
benchmark_output/: combined_klee_safe.csv  combined_klee_unsafe.csv  combined_wombat_safe.csv  combined_wombat_unsafe.csv  m1p_combined_klee_safe.csv  m1p_combined_klee_unsafe.csv  m1p_combined_wombat_safe.csv  m1p_combined_wombat_unsafe.csv
demo/: 10_safe_assert_bool_op.rs  11_unsafe_phi_instructions.rs  1_abs.rs  2_neg_abs.rs  3_unsafe_function_call.rs  4_safe_function_call.rs  5_unsafe_foo.rs  6_safe_foo.rs  7_unsafe_switch.rs  8_safe_switch.rs  9_unsafe_assert_bool_op.rs
src/: backward_symbolic_execution.rs  codegen.rs  codegen_basic_block.rs  codegen_call.rs  codegen_function.rs  codegen_instruction.rs  control_flow_graph.rs  function_utils.rs  get_var_name.rs  lib.rs  main.rs  pretty_print.rs  symbolic_execution.rs
src/codegen/: codegen_basic_block.rs  codegen_call.rs  codegen_function.rs  codegen_instruction.rs  mod.rs
src/utils/: mod.rs  (+6 more)
tests/: bool_params.rs  float_params.rs  hello_world.bc  hello_world.ll  hello_world.rs  switch.rs  test.bc  test.ll  test.rs  test1_abs.rs  test2_neg_abs.rs  test3_asserts.rs  test4_foo.rs  test5_switch.rs  test6_bool_params.rs  test7_float_params.rs  test_2.bc  test_2.ll  test_2.rs  test_2_old.rs  test_3.bc  test_3.ll  test_3.rs  test_3_old.rs  tests.rs
(+11 files in other folders)
