[package]
name = "wombat_symx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
z3 = {version="0.11.2", features = ["static-link-z3"]}
llvm-ir = { version = "0.8.1", features = ["llvm-13"] }
llvm-ir-analysis = { version = "0.3.1", features = ["llvm-13"] }
rustc-demangle = "0.1"
