[package]
name = "wombat_symx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
z3 = {version="0.11.2", features = ["static-link-z3"]}
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
rustc-demangle = "0.1"
tracing = "0.1"
tracing-subscriber = "0.2.0"
